@@ -1,4 +1,4 @@
-.TH PNG 5 "October 16, 2010"
+.TH PNG 5 "October 17, 2010"
 .SH NAME
 png \- Portable Network Graphics (PNG) format
 .SH DESCRIPTION
