@@ -1726,4 +1726,4 @@ main(int argc, char *argv[])
 }
 
 /* Generate a compiler error if there is an old png.h in the search path. */
-typedef version_1_5_0beta53 your_png_h_is_not_version_1_5_0beta53;
+typedef png_libpng_version_1_5_0beta53 Your_png_h_is_not_version_1_5_0beta53;
