@@ -3067,6 +3067,8 @@ Version 1.5.0beta53 [October 17, 2010]
   Use document name "libpng.txt" instead of "libpng-version.txt" as it was
     prior to libpng-1.2.16beta2, to simplify version differences.
   Removed obsolete remarks about setjmp handling from INSTALL.
+  Revised and renamed the typedef in png.h and png.c that was designed
+    to catch library and header mismatch.
 
 Send comments/corrections/commendations to png-mng-implement at lists.sf.net
 (subscription required; visit
